--- a/pages/inner/index.html
+++ b/pages/inner/index.html
@@ -13,8 +13,8 @@
     <p>
         Произвольный текст
     </p>
-  <img src="/my-progect/img/img1.png" alt="абсолютный путь">
-  <img src="../../img/img2.jpd" alt="относительный путь"> == $0
+  <img src="/img/img1.png" alt="абсолютный путь">
+  <img src="../../img/img2.jpg" alt="относительный путь"> == $0
 
 </body>
 </html>
