--- a/pages/inner/index.html
+++ b/pages/inner/index.html
@@ -14,7 +14,7 @@
         Произвольный текст
     </p>
   <img src="/img/img1.png" alt="абсолютный путь">
-  <img src="../../img/img2.jpg" alt="относительный путь"> == $0
+  <img src="../../img/img2.jpg" alt="относительный путь">
 
 </body>
 </html>
