--- a/pages/inner/index.html
+++ b/pages/inner/index.html
@@ -13,7 +13,7 @@
     <p>
         Произвольный текст
     </p>
-  <img src="/img/img1.png" alt="абсолютный путь">
+  <img src="/my-progect/img/img1.png" alt="абсолютный путь">
   <img src="../../img/img2.jpg" alt="относительный путь">
 
 </body>
